[gd_scene load_steps=7 format=3 uid="uid://bjxpafq4ic16x"]

[ext_resource type="Script" uid="uid://cfk1gx80kwa7i" path="res://core/ui/components/toast.gd" id="1_7hhey"]
[ext_resource type="PackedScene" uid="uid://duhgqixnyaweh" path="res://core/ui/components/notification_container.tscn" id="2_tllbf"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="4_bilxt"]

[sub_resource type="Animation" id="Animation_j5gb0"]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(640, -500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_624hb"]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, -500), Vector2(640, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d74t"]
_data = {
&"hide": SubResource("Animation_j5gb0"),
&"show": SubResource("Animation_624hb")
}

[node name="Toast" type="Control" groups=["notification_toast"]]
z_index = 20
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_7hhey")

[node name="ToastContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="NotificationContainer" parent="ToastContainer" instance=ExtResource("2_tllbf")]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="ToastContainer"]
visible = false
layout_mode = 2

[node name="ActionsContainer" type="HBoxContainer" parent="ToastContainer"]
layout_mode = 2

[node name="ActionButton" parent="ToastContainer/ActionsContainer" instance=ExtResource("4_bilxt")]
layout_mode = 2
text = "Action"

[node name="DismissButton" parent="ToastContainer/ActionsContainer" instance=ExtResource("4_bilxt")]
layout_mode = 2
text = "Dismiss"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1d74t")
}

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
